Add Google Business Profile connect flow
- App.jsx: refactor from Meta-only to multi-platform hub. New top-level
  screen state (checking|login|home|meta|google). Home screen shows live
  status cards for both platforms. Meta flow preserved unchanged. Google
  flow mirrors Meta: idle, loading, callback, success, manage, needs_reauth.
  Both platforms check their status in parallel on load. Disconnect on either
  returns to home with updated card state.

- App.css: add platform card styles for home hub, Google button (.btn-google),
  Google G icon (.google-g), status dots (.status-dot on/warn/off), back
  button (.btn-back), platform icon styles. All existing Meta styles kept.

- public/google/index.html: lightweight redirect page served at /google path.
  Google OAuth redirects here after user authorises; page immediately forwards
  to app root with ?provider=google&... so App.jsx can detect the callback.

- index.html: update title from "Omni — Connect Meta" to "Omni — Connect"

--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Omni — Connect Meta</title>
-    <link rel="icon" type="image/svg+xml" href="https://upload.wikimedia.org/wikipedia/commons/7/7b/Meta_Platforms_Inc._logo.svg" />
+    <title>Omni — Connect</title>
   </head>
   <body>
     <div id="root"></div>
